2008-07-23  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: updated references

2008-06-18  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: updated references

2008-05-04  Brian Bidulock  <bidulock@openss7.org>

	* openss7.lsm.in: updated for release
	* openss7.spec.in: updated for release
	* debian/mscript_header.in: updated for release
	* debian/rules.in: updated for release
	* scripts/texi/versions.texi: updated for release

2008-05-03  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* README-cvs: updates for release
	* THANKS: updates for release
	* doc/manual/openss7.texi: updates for release

	* .cvsignore: added ignore directories
	* acinclude.m4: added strx25 sub-package
	* doc/manual/configure.texi: added strx25 sub-package
	* doc/manual/descrip.texi: added strx25 sub-package
	* doc/manual/news.texi: added strx25 sub-package
	* doc/manual/openss7.texi: added strx25 sub-package
	* doc/manual/prerequisites.texi: added strx25 sub-package
	* doc/manual/rpm.texi: added strx25 sub-package
	* doc/manual/tree.texi: added strx25 sub-package

2008-04-28  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: updates for release
	* openss7.spec.in: updates for release

	* scripts/Doxyfile.in: updated headers for release
	* scripts/cflagcheck: updated headers for release
	* scripts/check_commands: updated headers for release
	* scripts/check_decls: updated headers for release
	* scripts/check_headers: updated headers for release
	* scripts/check_libs: updated headers for release
	* scripts/check_mans: updated headers for release
	* scripts/check_modules: updated headers for release
	* scripts/check_streams: updated headers for release
	* scripts/check_version: updated headers for release
	* scripts/chkconfig: updated headers for release
	* scripts/inet_mkdev: updated headers for release
	* scripts/inet_rmdev: updated headers for release