@@ -1,7 +1,7 @@
 @c -*- texinfo -*- vim: ft=texinfo
 @c =========================================================================
 @c
-@c @(#) $Id: compat.texi,v 0.9.2.40 2008-04-28 09:23:11 brian Exp $
+@c @(#) $Id: compat.texi,v 0.9.2.41 2008/07/23 19:14:40 brian Exp $
 @c
 @c =========================================================================
 @c
@@ -54,7 +54,7 @@
 @c 
 @c =========================================================================
 @c
-@c Last Modified $Date: 2008-04-28 09:23:11 $ by $Author: brian $
+@c Last Modified $Date: 2008/07/23 19:14:40 $ by $Author: brian $
 @c
 @c =========================================================================
 
@@ -74,6 +74,8 @@ release.}
 @item CentOS Enterprise Linux 4.0 (centos4)
 @item CentOS Enterprise Linux 4.92 (centos49)
 @item CentOS Enterprise Linux 5.0 (centos5)
+@item CentOS Enterprise Linux 5.1 (centos51)
+@item CentOS Enterprise Linux 5.2 (centos52)
 @item Debian 3.0r2 Woody (deb3.0) -- TBD
 @item Debian 3.1r0a Sarge (deb3.1)
 @item Debian 4.0r1 Etch (deb4.0)
